# tiny2-object

./: CMakeLists.txt  README.md  test-greeter.c  test-greeter.h  test-titlegreeter.c  test-titlegreeter.h  test.c  tiny2-object.c  tiny2-object.h  tiny2-object.pc.in
